--- a/nuxt-UI_Collection/package.json
+++ b/nuxt-UI_Collection/package.json
@@ -11,5 +11,9 @@
     "@nuxtjs/tailwindcss": "^6.6.4",
     "nuxt": "^3.3.1",
     "nuxt-icon": "^0.3.3"
+  },
+  "dependencies": {
+    "isotope-layout": "^3.0.6",
+    "vue-masonry": "^0.16.0"
   }
 }
