--- a/nuxt-UI_Collection/package.json
+++ b/nuxt-UI_Collection/package.json
@@ -8,12 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.6.4",
     "nuxt": "^3.3.1",
     "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
     "isotope-layout": "^3.0.6",
+    "tailwindcss-dark-mode": "^1.1.7",
     "vue-masonry": "^0.16.0"
   }
 }
